Adds changes for footer input and form checkbox

--- a/css/styles.css
+++ b/css/styles.css
@@ -413,7 +413,8 @@ button {
   transition: border-color 250ms var(--timing-function);
 }
 
-.form-input:focus-within {
+.form-input:focus-within,
+.form-input:focus {
   border-color: var(--accent-color);
 }
 
@@ -462,9 +463,9 @@ button {
 }
 
 .policy {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   margin-bottom: 30px;
-  outline: 1px solid blueviolet;
 }
 
 .checkbox {
@@ -473,6 +474,8 @@ button {
   appearance: none;
 
   position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .icon-check {
@@ -488,14 +491,8 @@ button {
     background-color 250ms var(--timing-function), fill 250ms var(--timing-function);
 }
 
-.test {
-  width: 20px;
-  height: 20px;
-  fill: #000000;
-}
-
 .checkbox:checked + .icon-check {
-  background-image: url(../images/check-2.svg);
+  background-image: url(../images/icon-check.svg);
   background-origin: border-box;
   background-size: contain;
   background-color: var(--accent-color);
@@ -503,7 +500,12 @@ button {
   fill: var(--icon-secondary-color);
 }
 
+.checkbox:focus + .icon-check {
+  border-color: var(--accent-color);
+}
+
 .policy-text {
+  margin-left: 7px;
   font-size: 14px;
   line-height: 1.71;
   color: var(--secondary-text-color);
